# local-dev-dashboard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.sh
.claude/: settings.json
.claude/.rules/: architecture.md  frontend.md  git-conventions.md  python-django.md  testing.md
.claude/agents/: code-reviewer.md
.claude/hooks/: ruff.sh
.claude/skills/add-feature/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.rules/: architecture.md  frontend.md
apps/projects/: admin.py  models.py  urls.py  views.py
apps/projects/management/commands/: sync_projects.py
apps/projects/migrations/: 0001_initial.py  0002_alter_project_options_project_last_commit.py
apps/projects/services/: catalog.py  discovery.py  git.py  readme.py  stack.py
apps/projects/templates/projects/: project_list.html
apps/projects/templates/projects/partials/: git_status.html  legend.html  open_button.html  open_result.html  project_card.html  readme_modal.html  status_badge.html
apps/projects/templatetags/: project_tags.py
apps/projects/tests/: README.md  test_catalog.py  test_discovery.py  test_git.py  test_readme.py  test_stack.py  test_templatetags.py  test_views.py
assets/css/: source.css
config/: settings.py  urls.py
docs/: admin.md  arquitectura.md  flujos-htmx.md  modelo-datos.md
templates/: base.html
templates/partials/: header.html
